--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -101,24 +101,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Partie 3\n",
+    "\n",
     "### Question 3\n",
     "\n",
     "Pour repasser au cadre de plusieurs voitures et considérer l'algorithme de décomposition/coordination, il nous faut remodeler les contraintes et ajouter la quatrième. \n",
     "\n",
-    "Commençons par redéfinir les notations: $m$ est le nombre de voitures et $E_{j}$ est l'énergie que l'on doit délivrer à la voiture $j$. La voiture $j$ charge de $t_{0,j}$ à $t_{1,j}$, et pour discétiser ces temps, on pose $t_{i,j} = k_{i,j}*dt$ et $k_{1,j} - k_{0,j} = \\Delta_{j}$.\n",
-    "On nôte $n = max(k_{1,j}, 1 \\leq j \\leq m)$. On travaille donc dans l'espace des vecteurs $\\mathbb{R}^{n}$. On garde les notations de $E, P$ et on note $A$ le vecteur des coûts.\n",
+    "Commençons par redéfinir les notations: $n$ est le nombre de voitures et $E_{i}$ est l'énergie que l'on doit délivrer à la voiture $i$. La voiture $i$ charge de $t_{0,i}$ à $t_{1,i}$, et pour discétiser ces temps, on pose $t_{u,i} = k_{u,i}*dt$, l'origine des temps étant $0$.\n",
+    "On nôte $m = max(k_{1,i}, 1 \\leq i \\leq n)$. On travaille donc dans l'espace des vecteurs $\\mathbb{R}^{m}$. On garde les notations de $E, P$ et on note $A$ le vecteur des coûts.\n",
+    "On note ensuite, pour une voiture $i$, $B_{i}$ le vecteur colonne à $m$ lignes où $b_{i,j}$ vaut $1$ si la voiture est en charge entre $dt * j$ et $dt * (j+1)$, et $0$ sinon.\n",
     "\n",
-    "Pour chaque voiture $j$, on note $X_{j}$ le vecteur des puissances délivrées, et on synthétise tout cela dans la variable $X = (X_{j})$ qui est donc une matrice $n*m$.\n",
-    "Ce qui nous amène à la fonction coût: $f(X) = A^{t}XU$ où $U = (1,...,1)$ est un vecteur colonne à $m$ lignes.\n",
+    "Pour chaque voiture $i$, on note $X_{i}$ le vecteur des puissances délivrées, et on synthétise tout cela dans la variable $X = (X_{i}^{T})$ qui est donc une matrice $n*m$.\n",
+    "Ce qui nous amène à la fonction coût: $f(X) = dt*U^{T}XA$ où $U = (1,...,1)$ est un vecteur colonne à $n$ lignes.\n",
     "\n",
-    "On va séparer ces fonctions coût selon les lignes de $X$. On note ainsi $f_{i}(L_{i}) = a_{i}*\\sum_{j=1}^{m}x_{i,j}$, et on a bien $f(X) = \\sum^{n}_{i=1}f_{i}(X_{i})$.\n",
+    "On va séparer ces fonctions coût selon les lignes de $X$. On note ainsi $f_{i}(X_{i}^{T}) = dt*a_{i}*\\sum_{j=1}^{m}x_{i,j}$, et on a bien $f(X) = \\sum^{n}_{i=1}f_{i}(X_{i}^{T})$.\n",
     "\n",
-    "Il nous faut maintenant adapter les contraites. On prend $i$ dans $[\\![1,n]\\!]$. \n",
+    "Il nous faut maintenant adapter les contraites. On se heurte alors à un problème: si l'on choisi de découper la matrice $X$ selon les colonnes, il est impossible d'implémenter la contrainte sur l'énergie délivrée à la voiture, car cette containte nécessite la connaissance d'une ligne entière. Réciproquement, si l'on découpe $X$ selon les colonnes, on ne peut pas implémenter la contrainte sur la puissance maximale délivrée par le réseau, car cette contrainte nécessite la connaissance d'une colonne. Ce problème est du au fait que l'algorithme de décomposition/coordination est valable si les différents problèmes ne se contaignent pas les uns les autres: puisqu'on décompose les contraintes et la fonction coût, on perd de l'information quand à la simultanéité des problèmes. \n",
     "\n",
-    "- $c_{i,1}(L_{i}) = \\sum_{j=1}^{m} x_{i,j}$\n",
-    "- $c_{i,2}(L_{i}) = \\sum_{j=1}^{m} |x_{i,j}| - x_{i,j}$\n",
+    "Pour résoudre ce problème, on se poropose de passer à un découpage en lignes de $X$ et considérer qu'entre un temps $dt * j$ et $dt * (j+1)$, on ne délivre pas plus de $\\frac{P}{\\sum^{i}_{i=1}b_{i,j}}$ à une voiture, autrement dit on ne délivre pas plus la puissance maximale divisée par le nombre de voiture en charge. Bien que ça ne soit pas optimal, ceci permet d'éliminer la contrainte qui porte sur les colonnes.\n",
     "\n",
-    "Ici, on arrive à la contrainte 3. Le problème de cette contrainte, c'est qu'elle porte sur les colonnes de $X$. On pourrait donc penser qu'on s'est trompé, et qu'il faut mieux passer à un découpage en colonne de $X$. Cependant, la contrainte 1 porte sur les lignes de $X$. Il semble donc que l'algorithme de décomposition/coordination soit peu adapté dans le cas que nous traitons."
+    "On se retrouve donc avec cette contrainte, qui doit rester en dessous de 0, avec $D = \\frac{1}{n}\\sum_{i=1}^{n}B_{i}$ un vecteur colonnes à $m$ lignes et $U = (1,...,1)$ un vecteur colonne à $m$ lignes.\n",
+    "\n",
+    "$c_{i}(X_{i}^{T}) = ((X_{i} - PD)^{T}, -X_{i}^{T}, X_{i}^{T} * (1-B_{i}), dt*X_{i}^{T}*U - E_{i})$\n",
+    "\n",
+    "Comme on le voit, le vecteur des contraintes concatène toutes les contraintes, et avec 2 contraintes d'inégalités et 2 d'égalités, on obtient un vecteur ligne à $2m+2$ composantes.\n",
+    "\n",
+    "Avec un compromis sur la contrainte de puissance, on peut donc implémenter cet algorithme."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4\n",
+    "\n",
+    "Voici l'implémentation dans le cas de $n$ véhicules, qu'on peut appliquer au cas de deux véhicules en posant $n = 2$.\n",
+    "\n",
+    "Pour la minimisation individuelle, on utilise la méthode d'Uzawa précedemment codée."
    ]
   },
   {
@@ -126,7 +145,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##On considère qu'on a déja A le vecteur des coûts de taille m*1, le pas dt, la puissance max P.\n",
+    "\n",
+    "class Voiture:\n",
+    "    \n",
+    "    def __init__(k0, k1, E):\n",
+    "        self.k0 = k0\n",
+    "        self.k1 = k1\n",
+    "        self.E = E\n",
+    "        \n",
+    "def formalizeData(voitureArray, A):\n",
+    "    \"\"\"Prépare la matrice X, B, E, et D commme décrite ci-dessus pour l'algorithme de décomposition / coordination\"\"\"\n",
+    "    n, m = len(voitureArray), len(A)\n",
+    "    B = np.zeros((n,m), dtype=np.bool)\n",
+    "    E = np.zeros((n))\n",
+    "    X = np.zeros((n,m))\n",
+    "    for i in range(n):\n",
+    "        v = voitureArray[i]\n",
+    "        for j in range(v.k0, v.k1):\n",
+    "            B[i,j] = 1\n",
+    "        E[i] = v.E\n",
+    "    D = np.zeros((m))\n",
+    "    for j in range(m):\n",
+    "        D[j] = np.sum(B[:,j])\n",
+    "    D = D / n\n",
+    "    return B, X, E, D\n",
+    "\n",
+    "def minimiseIndividuel(A, B, D, X, E, dt, P, mul):\n",
+    "    \"\"\"Minimise le Lagrangien.\"\"\"\n",
+    "    f = lambda x: np.dot(A, x) + np.dot(mul, contrainte(B, D, X, E, dt, P))\n",
+    "\n",
+    "def project(arr):\n",
+    "    \"\"\"Projète un vecteur de R^n sur R+^n\"\"\"\n",
+    "    for i in range(len(arr)):\n",
+    "        if arr[i] < 0:\n",
+    "            arr[i] = 0\n",
+    "    return arr\n",
+    "\n",
+    "def contrainte(B, D, X, E, dt, P):\n",
+    "    \"\"\"Renvoie le vecteur des contraintes comme décrit ci-dessus\"\"\"\n",
+    "    L = []\n",
+    "    L = L + list(X - P*D)\n",
+    "    L = L + list(-X)\n",
+    "    L = L + [np.dot(X, (1 - B))]\n",
+    "    L = L + [dt*np.sum(X) - E]\n",
+    "    return L\n",
+    "\n",
+    "def minimse(voitureArray, A, dt, P, eps, mul, pas):\n",
+    "    \"\"\"Renvoie une matrice de taille n*m contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
+    "    On utilise la simplification évoquée ci-dessus pour la contrainte sur P.\n",
+    "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; A est le vecteur des coûts;\n",
+    "    P la puissance max; eps l'écart entre deux multiplicateurs pour que l'algorithme s'arrête;\n",
+    "    mul et pas sont les données choisie au début de l'algorithme pour le premier multiplicateur de Lagrange et le pas.\"\"\"\n",
+    "    B, X, E, D = formalizeData(voitureArray, A)\n",
+    "    n, m = len(voitureArray), len(A)\n",
+    "    old_mul = mul + 2*eps\n",
+    "    while abs(mul - old_mul) > eps:\n",
+    "        new_mul = mul\n",
+    "        for i in range(n):\n",
+    "            X[i] = minimiseIndividuel(A, B[i], D, X[i], E[i], dt, P, mul)\n",
+    "            new_mul += pas*contrainte(B[i], D, X[i], E[i], dt, P)\n",
+    "        old_mul = mul\n",
+    "        mul = project(new_mul)\n",
+    "    return X"
+   ]
   }
  ],
  "metadata": {
