--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -67,7 +67,8 @@
     "\n",
     "def findMin(C, I):\n",
     "    \"\"\"Renvoie l'élément j de I qui minimise C_j\"\"\"\n",
-    "    j = I[0]\n",
+    "    j = I.pop()\n",
+    "    I.add(j)\n",
     "    currentMin = C[j]\n",
     "    for i in I:\n",
     "        if C[i] < currentMin:\n",
@@ -136,12 +137,12 @@
     "\n",
     "Voici l'implémentation dans le cas de $n$ véhicules, qu'on peut appliquer au cas de deux véhicules en posant $n = 2$.\n",
     "\n",
-    "Pour la minimisation individuelle, on utilise la méthode d'Uzawa précedemment codée."
+    "Pour la minimisation individuelle, on utilise la méthode de descente de gradient stochastique."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,9 +172,25 @@
     "    D = D / n\n",
     "    return B, X, E, D\n",
     "\n",
-    "def minimiseIndividuel(A, B, D, X, E, dt, P, mul):\n",
-    "    \"\"\"Minimise le Lagrangien.\"\"\"\n",
+    "def grad(f, x, dx):\n",
+    "    g = np.zeros(x.shape)\n",
+    "    for i in range(len(g)):\n",
+    "        acc = np.zeros(x.shape)\n",
+    "        acc[i] = dx\n",
+    "        g[i] = f(x + a)\n",
+    "    return (g - f(x))/dx\n",
+    "\n",
+    "def minimiseIndividuel(A, B, D, X, E, dt, P, mul, tries = 10000, dx = 0.01):\n",
     "    f = lambda x: np.dot(A, x) + np.dot(mul, contrainte(B, D, X, E, dt, P))\n",
+    "    n = len(X)\n",
+    "    theta = 1 + random.random() - random.random()\n",
+    "    while tries != 0:\n",
+    "        i = random.randrange(n)\n",
+    "        acc = np.zeros(X.shape)\n",
+    "        acc[i] = dx\n",
+    "        X[i] = X[i] - theta*(f(X + acc) - f(X))/dx\n",
+    "        tries -= 1\n",
+    "    return X\n",
     "\n",
     "def project(arr):\n",
     "    \"\"\"Projète un vecteur de R^n sur R+^n\"\"\"\n",
@@ -209,6 +226,49 @@
     "        mul = project(new_mul)\n",
     "    return X"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cependant, on voit apparaître un problème: le lagrangien est linéaire. Si on essaye de le minimiser sans contraite, comme la méthode de décomposition/coordination le demande, on ne va pas arriver à un minimum, car il n'en existe pas. Ceci est sans doute du à l'hypothèse que l'on fait sur les puissances. \n",
+    "\n",
+    "Pour palier ce problème, on propose une autre méthode de résolution, basée sur l'algorithme exposé en partie 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimse2(voitureArray, A, dt, P):\n",
+    "    \"\"\"Renvoie une matrice de taille n*m contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
+    "    On utilise la simplification évoquée ci-dessus pour la contrainte sur P.\n",
+    "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; A est le vecteur des coûts;\n",
+    "    P la puissance max.\"\"\"\n",
+    "    B, X, E, D = formalizeData(voitureArray, A)\n",
+    "    D = P*D\n",
+    "    n, m = len(voitureArray), len(A)\n",
+    "    for i in range(n):\n",
+    "        v = voitureArray[i]\n",
+    "        k0, k1 = v.k0, v.k1\n",
+    "        X[i, k0 : k1] = oneCarSolve2(A[k0 : k1], dt, E[i], D[k0 : k1])\n",
+    "        \n",
+    "\n",
+    "def oneCarSolve(C, dt, E, P):\n",
+    "    \"\"\"Implémentation de l'algorithme décrit ci-dessus. \n",
+    "    Renvoie un tuple composé d'un booléen et du vecteur des puissances délivrées. Le booléen est True si l'algorithme converge.\"\"\"\n",
+    "    n = C.shape[0]\n",
+    "    X = np.zeros((n))\n",
+    "    I = set(range(n))\n",
+    "    while (E != 0) or (I != set()):\n",
+    "        j = findMin(C, I)\n",
+    "        X[j] = min(P, E/dt)\n",
+    "        I = I.remove(j)\n",
+    "        E = E - X[j]\n",
+    "    return (E == 0), X"
+   ]
   }
  ],
  "metadata": {
@@ -227,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
