--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -86,7 +86,7 @@
     "        j = findMin(C, I)\n",
     "        X[j] = min(P, E/dt)\n",
     "        I = I.remove(j)\n",
-    "        E = E - X[j]\n",
+    "        E = E - dt*X[j]\n",
     "    return (E == 0), X\n",
     "\n",
     "##Données de test\n",
@@ -244,19 +244,23 @@
    "source": [
     "def minimse2(voitureArray, A, dt, P):\n",
     "    \"\"\"Renvoie une matrice de taille n*m contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
+    "    Renvoie également un vecteur ligne, qui note si la voiture i a été chargée comme prévu à la case i.\n",
     "    On utilise la simplification évoquée ci-dessus pour la contrainte sur P.\n",
     "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; A est le vecteur des coûts;\n",
     "    P la puissance max.\"\"\"\n",
     "    B, X, E, D = formalizeData(voitureArray, A)\n",
     "    D = P*D\n",
+    "    done = np.zeros((n), dtype = np.bool)\n",
     "    n, m = len(voitureArray), len(A)\n",
     "    for i in range(n):\n",
     "        v = voitureArray[i]\n",
     "        k0, k1 = v.k0, v.k1\n",
     "        X[i, k0 : k1] = oneCarSolve2(A[k0 : k1], dt, E[i], D[k0 : k1])\n",
-    "        \n",
+    "        if (np.sum(X[i]) == (E[i]/dt)):\n",
+    "            done[i] = True\n",
+    "    return X, done\n",
     "\n",
-    "def oneCarSolve(C, dt, E, P):\n",
+    "def oneCarSolve(C, dt, E, D):\n",
     "    \"\"\"Implémentation de l'algorithme décrit ci-dessus. \n",
     "    Renvoie un tuple composé d'un booléen et du vecteur des puissances délivrées. Le booléen est True si l'algorithme converge.\"\"\"\n",
     "    n = C.shape[0]\n",
@@ -264,10 +268,10 @@
     "    I = set(range(n))\n",
     "    while (E != 0) or (I != set()):\n",
     "        j = findMin(C, I)\n",
-    "        X[j] = min(P, E/dt)\n",
+    "        X[j] = min(D[j], E/dt)\n",
     "        I = I.remove(j)\n",
-    "        E = E - X[j]\n",
-    "    return (E == 0), X"
+    "        E = E - dt*X[j]\n",
+    "    return X"
    ]
   }
  ],
