--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "Pour repasser au cadre de plusieurs voitures et considérer l'algorithme de décomposition/coordination, il nous faut remodeler les contraintes et ajouter la quatrième. \n",
     "\n",
-    "Commençons par rappeler les notations: $n$ est le nombre de voitures et $E_{i}$ est l'énergie que l'on doit délivrer à la voiture $i$. La voiture $i$ charge de $t_{0,i}$ à $t_{1,i}$, et pour discétiser ces temps, on pose $t_{u,i} = k_{u,i}*dt$, l'origine des temps étant $0$.\n",
+    "Commençons par rappeler les notations: $n$ est le nombre de voitures et $R_{i}$ est l'énergie que l'on doit délivrer à la voiture $i$. La voiture $i$ charge de $t_{0,i}$ à $t_{1,i}$, et pour discétiser ces temps, on pose $t_{u,i} = k_{u,i}*dt$, l'origine des temps étant $0$.\n",
     "On nôte $m = max(k_{1,i}, 1 \\leq i \\leq n)$. On travaille donc dans l'espace des vecteurs $\\mathbb{R}^{m}$. On garde les notations de $E, P$ et on note $A$ le vecteur des coûts.\n",
     "On note ensuite, pour une voiture $i$, $B_{i}$ le vecteur colonne à $m$ lignes où $b_{i,j}$ vaut $1$ si la voiture est en charge entre $dt * j$ et $dt * (j+1)$, et $0$ sinon.\n",
     "\n",
