changement de notation

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -108,24 +108,28 @@
     "\n",
     "Pour repasser au cadre de plusieurs voitures et considérer l'algorithme de décomposition/coordination, il nous faut remodeler les contraintes et ajouter la quatrième. \n",
     "\n",
-    "Commençons par rappeler les notations: $n$ est le nombre de voitures et $R_{i}$ est l'énergie que l'on doit délivrer à la voiture $i$. La voiture $i$ charge de $t_{0,i}$ à $t_{1,i}$, et pour discétiser ces temps, on pose $t_{u,i} = k_{u,i}*dt$, l'origine des temps étant $0$.\n",
-    "On nôte $m = max(k_{1,i}, 1 \\leq i \\leq n)$. On travaille donc dans l'espace des vecteurs $\\mathbb{R}^{m}$. On garde les notations de $E, P$ et on note $A$ le vecteur des coûts.\n",
-    "On note ensuite, pour une voiture $i$, $B_{i}$ le vecteur colonne à $m$ lignes où $b_{i,j}$ vaut $1$ si la voiture est en charge entre $dt * j$ et $dt * (j+1)$, et $0$ sinon.\n",
+    "Commençons par rappeler les notations: $n$ est le nombre de voitures et $E_{i}$ est l'énergie que l'on doit délivrer à la voiture $i$. La voiture $i$ charge de $t_{i}^{0}$ à $t_{i}^{1}$. On travaille ici en énergie pour simplifier les notations et les calculs. \n",
     "\n",
-    "Pour chaque voiture $i$, on note $X_{i}$ le vecteur des puissances délivrées, et on synthétise tout cela dans la variable $X = (X_{i}^{T})$ qui est donc une matrice $n*m$.\n",
-    "Ce qui nous amène à la fonction coût: $f(X) = dt*U^{T}XA$ où $U = (1,...,1)$ est un vecteur colonne à $n$ lignes.\n",
+    "On pose $t_{0} = min(t_{i}^{0})$ et $t_{f} = max(t_{i}^{1})$. On note $N$ le nombre d'intervalles de temps, $T = t_{f} - t_{0}$ et $dt = \\frac{T}{N}$. On travaille donc dans l'espace des vecteurs $\\mathbb{R}^{N}$. \n",
     "\n",
-    "On va séparer ces fonctions coût selon les lignes de $X$. On note ainsi $f_{i}(X_{i}^{T}) = dt*a_{i}*\\sum_{j=1}^{m}x_{i,j}$, et on a bien $f(X) = \\sum^{n}_{i=1}f_{i}(X_{i}^{T})$.\n",
+    "Le vecteur des coûts est $F$.\n",
     "\n",
-    "Il nous faut maintenant adapter les contraites. On se heurte alors à un problème: si l'on choisi de découper la matrice $X$ selon les colonnes, il est impossible d'implémenter la contrainte sur l'énergie délivrée à la voiture, car cette containte nécessite la connaissance d'une ligne entière. Réciproquement, si l'on découpe $X$ selon les colonnes, on ne peut pas implémenter la contrainte sur la puissance maximale délivrée par le réseau, car cette contrainte nécessite la connaissance d'une colonne. Ce problème est du au fait que l'algorithme de décomposition/coordination est valable si les différents problèmes ne se contaignent pas les uns les autres: puisqu'on décompose les contraintes et la fonction coût, on perd de l'information quand à la simultanéité des problèmes. \n",
+    "On note ensuite, pour une voiture $i$, $B_{i}$ le vecteur colonne à $N$ lignes où $b_{i,j}$ vaut $1$ si la voiture est en charge entre $dt * j$ et $dt * (j+1)$, et $0$ sinon. \n",
     "\n",
-    "Pour résoudre ce problème, on se poropose de passer à un découpage en lignes de $X$ et considérer qu'entre un temps $dt * j$ et $dt * (j+1)$, on ne délivre pas plus de $\\frac{P}{\\sum^{i}_{i=1}b_{i,j}}$ à une voiture, autrement dit on ne délivre pas plus la puissance maximale divisée par le nombre de voiture en charge. Bien que ça ne soit pas optimal, ceci permet d'éliminer la contrainte qui porte sur les colonnes.\n",
+    "Pour chaque voiture $i$, on note $P_{i}$ le vecteur des puissances délivrées, et on synthétise tout cela dans la variable $P = (P_{i}^{T})$ qui est donc une matrice $n*N$.\n",
+    "Ce qui nous amène à la fonction coût: $g(X) = dt*U^{T}PF$ où $U = (1,...,1)$ est un vecteur colonne à $n$ lignes.\n",
     "\n",
-    "On se retrouve donc avec cette contrainte, qui doit rester en dessous de 0, avec $D = \\frac{1}{n}\\sum_{i=1}^{n}B_{i}$ un vecteur colonnes à $m$ lignes et $U = (1,...,1)$ un vecteur colonne à $m$ lignes.\n",
+    "On va séparer ces fonctions coût selon les lignes de $P$. On note ainsi $g_{i}(P_{i}^{T}) = dt*\\sum_{j=1}^{N}f_{j}*p_{i,j}$, et on a bien $g(X) = \\sum^{n}_{i=1}g_{i}(P_{i}^{T})$.\n",
     "\n",
-    "$c_{i}(X_{i}^{T}) = ((X_{i} - PD)^{T}, -X_{i}^{T}, X_{i}^{T} * (1-B_{i}), dt*X_{i}^{T}*U - E_{i})$\n",
+    "Il nous faut maintenant adapter les contraites. On se heurte alors à un problème: si l'on choisi de découper la matrice $P$ selon les colonnes, il est impossible d'implémenter la contrainte sur l'énergie délivrée à la voiture, car cette containte nécessite la connaissance d'une ligne entière. Réciproquement, si l'on découpe $P$ selon les colonnes, on ne peut pas implémenter la contrainte sur la puissance maximale délivrée par le réseau, car cette contrainte nécessite la connaissance d'une colonne. Ce problème est du au fait que l'algorithme de décomposition/coordination est valable si les différents problèmes ne se contaignent pas les uns les autres: puisqu'on décompose les contraintes et la fonction coût, on perd de l'information quand à la simultanéité des problèmes. \n",
     "\n",
-    "Comme on le voit, le vecteur des contraintes concatène toutes les contraintes, et avec 2 contraintes d'inégalités et 2 d'égalités, on obtient un vecteur ligne à $2m+2$ composantes.\n",
+    "Pour résoudre ce problème, on se poropose de passer à un découpage en lignes de $P$ et considérer qu'entre un temps $dt * j$ et $dt * (j+1)$, on ne délivre pas plus de $\\frac{Pmax}{\\sum^{n}_{i=1}b_{i,j}}$ à une voiture, autrement dit on ne délivre pas plus la puissance maximale divisée par le nombre de voiture en charge. Bien que ça ne soit pas optimal, ceci permet d'éliminer la contrainte qui porte sur les colonnes.\n",
+    "\n",
+    "On se retrouve donc avec cette contrainte, qui doit rester en dessous de 0, avec $D = \\frac{1}{n}\\sum_{i=1}^{n}B_{i}$ un vecteur colonnes à $N$ lignes et $U = (1,...,1)$ un vecteur colonne à $N$ lignes.\n",
+    "\n",
+    "$c_{i}(P_{i}^{T}) = ((P_{i} - Pmax*D)^{T}, -P_{i}^{T}, P_{i}^{T} * (1-B_{i}), dt*X_{i}^{T}*U - E_{i})$\n",
+    "\n",
+    "Comme on le voit, le vecteur des contraintes concatène toutes les contraintes, et avec 2 contraintes d'inégalités et 2 d'égalités, on obtient un vecteur ligne à $2N+2$ composantes.\n",
     "\n",
     "Avec un compromis sur la contrainte de puissance, on peut donc implémenter cet algorithme."
    ]
@@ -147,51 +151,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##On considère qu'on a déja A le vecteur des coûts de taille m*1, le pas dt, la puissance max P.\n",
+    "##On considère qu'on a déja F le vecteur des coûts de taille N*1, le pas dt, la puissance max Pmax.\n",
     "\n",
     "class Voiture:\n",
     "    \n",
-    "    def __init__(k0, k1, E):\n",
-    "        self.k0 = k0\n",
-    "        self.k1 = k1\n",
+    "    def __init__(j0, j1, E):\n",
+    "        self.j0 = j0 #t_j0 est le temps auquel la charge commence\n",
+    "        self.j1 = j1 #t_j1 est le temps auquel la charge fini\n",
     "        self.E = E\n",
     "        \n",
-    "def formalizeData(voitureArray, A):\n",
+    "def formalizeData(voitureArray, F):\n",
     "    \"\"\"Prépare la matrice X, B, E, et D commme décrite ci-dessus pour l'algorithme de décomposition / coordination\"\"\"\n",
-    "    n, m = len(voitureArray), len(A)\n",
-    "    B = np.zeros((n,m), dtype=np.bool)\n",
+    "    n, N = len(voitureArray), len(F)\n",
+    "    B = np.zeros((n,N), dtype=np.bool)\n",
     "    E = np.zeros((n))\n",
-    "    X = np.zeros((n,m))\n",
+    "    P = np.zeros((n,N))\n",
     "    for i in range(n):\n",
     "        v = voitureArray[i]\n",
-    "        for j in range(v.k0, v.k1):\n",
+    "        for j in range(v.j0, v.j1):\n",
     "            B[i,j] = 1\n",
     "        E[i] = v.E\n",
-    "    D = np.zeros((m))\n",
-    "    for j in range(m):\n",
+    "    D = np.zeros((N))\n",
+    "    for j in range(N):\n",
     "        D[j] = np.sum(B[:,j])\n",
     "    D = D / n\n",
-    "    return B, X, E, D\n",
+    "    return B, P, E, D\n",
     "\n",
-    "def grad(f, x, dx):\n",
-    "    g = np.zeros(x.shape)\n",
-    "    for i in range(len(g)):\n",
-    "        acc = np.zeros(x.shape)\n",
-    "        acc[i] = dx\n",
-    "        g[i] = f(x + a)\n",
-    "    return (g - f(x))/dx\n",
-    "\n",
-    "def minimiseIndividuel(A, B, D, X, E, dt, P, mul, tries = 10000, dx = 0.01):\n",
-    "    f = lambda x: np.dot(A, x) + np.dot(mul, contrainte(B, D, X, E, dt, P))\n",
+    "def minimiseIndividuel(F, B, D, P, E, dt, Pmax, mul, tries = 10000, dx = 0.01):\n",
+    "    g = lambda x: np.dot(F, x) + np.dot(mul, contrainte(B, D, P, E, dt, Pmax))\n",
     "    n = len(X)\n",
     "    theta = 1 + random.random() - random.random()\n",
     "    while tries != 0:\n",
     "        i = random.randrange(n)\n",
-    "        acc = np.zeros(X.shape)\n",
+    "        acc = np.zeros(P.shape)\n",
     "        acc[i] = dx\n",
-    "        X[i] = X[i] - theta*(f(X + acc) - f(X))/dx\n",
+    "        P[i] = P[i] - theta*(f(P + acc) - f(P))/dx\n",
     "        tries -= 1\n",
-    "    return X\n",
+    "    return P\n",
     "\n",
     "def project(arr):\n",
     "    \"\"\"Projète un vecteur de R^n sur R+^n\"\"\"\n",
@@ -200,32 +196,32 @@
     "            arr[i] = 0\n",
     "    return arr\n",
     "\n",
-    "def contrainte(B, D, X, E, dt, P):\n",
+    "def contrainte(B, D, P, E, dt, Pmax):\n",
     "    \"\"\"Renvoie le vecteur des contraintes comme décrit ci-dessus\"\"\"\n",
     "    L = []\n",
-    "    L = L + list(X - P*D)\n",
-    "    L = L + list(-X)\n",
-    "    L = L + [np.dot(X, (1 - B))]\n",
-    "    L = L + [dt*np.sum(X) - E]\n",
+    "    L = L + list(P - Pmax*D)\n",
+    "    L = L + list(-p)\n",
+    "    L = L + [np.dot(P, (1 - B))]\n",
+    "    L = L + [dt*np.sum(P) - E]\n",
     "    return L\n",
     "\n",
-    "def minimse(voitureArray, A, dt, P, eps, mul, pas):\n",
-    "    \"\"\"Renvoie une matrice de taille n*m contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
-    "    On utilise la simplification évoquée ci-dessus pour la contrainte sur P.\n",
-    "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; A est le vecteur des coûts;\n",
-    "    P la puissance max; eps l'écart entre deux multiplicateurs pour que l'algorithme s'arrête;\n",
+    "def minimse(voitureArray, F, dt, Pmax, eps, mul, pas):\n",
+    "    \"\"\"Renvoie une matrice de taille n*N contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
+    "    On utilise la simplification évoquée ci-dessus pour la contrainte sur Pmax.\n",
+    "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; F est le vecteur des coûts;\n",
+    "    Pmax la puissance max; eps l'écart entre deux multiplicateurs pour que l'algorithme s'arrête;\n",
     "    mul et pas sont les données choisie au début de l'algorithme pour le premier multiplicateur de Lagrange et le pas.\"\"\"\n",
-    "    B, X, E, D = formalizeData(voitureArray, A)\n",
-    "    n, m = len(voitureArray), len(A)\n",
+    "    B, P, E, D = formalizeData(voitureArray, f)\n",
+    "    n, N = len(voitureArray), len(P)\n",
     "    old_mul = mul + 2*eps\n",
     "    while abs(mul - old_mul) > eps:\n",
     "        new_mul = mul\n",
     "        for i in range(n):\n",
-    "            X[i] = minimiseIndividuel(A, B[i], D, X[i], E[i], dt, P, mul)\n",
-    "            new_mul += pas*contrainte(B[i], D, X[i], E[i], dt, P)\n",
+    "            P[i] = minimiseIndividuel(F, B[i], D, P[i], E[i], dt, Pmax, mul)\n",
+    "            new_mul += pas*contrainte(B[i], D, P[i], E[i], dt, Pmax)\n",
     "        old_mul = mul\n",
     "        mul = project(new_mul)\n",
-    "    return X"
+    "    return P"
    ]
   },
   {
@@ -243,19 +239,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minimse2(voitureArray, A, dt, P):\n",
-    "    \"\"\"Renvoie une matrice de taille n*m contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
+    "def minimse2(voitureArray, F, dt, Pmax):\n",
+    "    \"\"\"Renvoie une matrice de taille n*N contenant les puissances délivrées aux voitures en minimisant le coût des recharges.\n",
     "    Renvoie également un vecteur ligne, qui note si la voiture i a été chargée comme prévu à la case i.\n",
-    "    On utilise la simplification évoquée ci-dessus pour la contrainte sur P.\n",
-    "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; A est le vecteur des coûts;\n",
-    "    P la puissance max.\"\"\"\n",
-    "    B, X, E, D = formalizeData(voitureArray, A)\n",
-    "    D = P*D\n",
+    "    On utilise la simplification évoquée ci-dessus pour la contrainte sur Pmax.\n",
+    "    voitureArray contient des éléments de la classe Voiture; dt est le pas de temps; F est le vecteur des coûts;\n",
+    "    Pmax la puissance max.\"\"\"\n",
+    "    B, P, E, D = formalizeData(voitureArray, F)\n",
+    "    D = Pmax*D\n",
+    "    n, N = len(voitureArray), len(A)\n",
     "    done = np.zeros((n), dtype = np.bool)\n",
-    "    n, m = len(voitureArray), len(A)\n",
     "    for i in range(n):\n",
     "        v = voitureArray[i]\n",
-    "        k0, k1 = v.k0, v.k1\n",
+    "        j0, j1 = v.j0, v.k1\n",
     "        X[i, k0 : k1] = oneCarSolve2(A[k0 : k1], dt, E[i], D[k0 : k1])\n",
     "        if (np.sum(X[i]) == (E[i]/dt)):\n",
     "            done[i] = True\n",
